// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    2
     
    expenses
     totalling 
    $1.23
  </h3>
</div>
`;

exports[`should render ExpensesSummary correctly with no expenses 1`] = `
<div>
  <h3>
    Viewing 
     
    expenses
     totalling 
    $0.00
  </h3>
</div>
`;

exports[`should render ExpensesSummary correctly with one expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expenses
     totalling 
    $1.23
  </h3>
</div>
`;
